# freeswitch-asr

./: LICENSE.md  README.md  modules.conf
conf/vanilla/autoload_configs/: yyasr.conf.xml  yytts.conf.xml
scripts/: yyasr_demo.lua  yytts_demo.lua
src/mod/asr_tts/mod_yyasr/: Makefile.am  mod_yyasr.2017.vcxproj  mod_yyasr.c
src/mod/asr_tts/mod_yytts/: Makefile.am  mod_yytts.2017.vcxproj  mod_yytts.c
